--- a/cadastro.html
+++ b/cadastro.html
@@ -46,7 +46,7 @@
             <input type="text" id="nome" name="nome" class="input-voluntario" required />
 
             <label for="cpf">CPF</label>
-            <input type="text" id="cpf" name="cpf" class="input-voluntario" pattern="\d{11}" maxlength="11" placeholder="Somente números" required />
+            <input type="text" id="cpf" name="cpf" class="input-voluntario" pattern="\d{11}" maxlength="11" placeholder="000.000.000-00" required />
 
             <label for="email">Email</label>
             <input type="email" id="email" name="email" class="input-voluntario" placeholder="exemplo@email.com" required />
@@ -310,4 +310,5 @@
       <p>© 2025 Esperança Viva. Todos os direitos reservados.</p>
     </footer>
   </body>
+
 </html>
