atualização do html de sobre

--- a/sobre.html
+++ b/sobre.html
@@ -138,6 +138,9 @@
         </ul>
       </nav>
       <p>© 2025 Esperança Viva. Todos os direitos reservados.</p>
-    </footer>
+     </footer>
+    
+    <script src="js/script.js"></script>
+
   </body>
 </html>
